# UdpChat

./: .gitignore  CMakeLists.txt  Makefile  README.md  test.txt
src/: main.c  packets.h  udpchat.h  usertable.c  usertable.h
src/client/: client.c  client_to_server.c  client_to_server.h  listener.c  listener.h  sender_topeer.c  sender_topeer.h  sender_toserver.c  sender_toserver.h
src/client/shell/: shell.c  shell.h
src/server/: server.c
